examples/test/testpolicy4141.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4141
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key36: value6
      key46: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value24
          key47: value30
      podSelector:
        matchLabels:
          key24: value20
